added api for Player For Auction
